--- a/beauty-app/src/app/pages/rooms/rooms.page.html
+++ b/beauty-app/src/app/pages/rooms/rooms.page.html
@@ -1,10 +1,11 @@
+<app-header titulo="BeautyLab Rooms"></app-header>
 <ion-content>
   <div class="ion-text-center">
-    <img class="img-logo" src="assets/logoBL/colorLogoVWL.png" alt="">
+    
   </div>
   <div>
-    <h4 class="ion-text-center">Thank You <br> For BuyOur Plan</h4>
-    <h6 class="ion-text-center">Select Your Flight</h6>
+    <h4 class="ion-text-center">These are Our<br> Rooms</h4>
+    <h6 class="ion-text-center">Check the Photos</h6>
   </div>
   <div class="ion-padding">
     <ion-radio-group>
