--- a/beauty-app/src/app/pages/makeplan/makeplan.page.html
+++ b/beauty-app/src/app/pages/makeplan/makeplan.page.html
@@ -1,8 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>makeplan</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header titulo="BeautyLab Rooms"></app-header>
+
 
 <ion-content>
 
