--- a/beauty-app/src/app/pages/register/register.page.html
+++ b/beauty-app/src/app/pages/register/register.page.html
@@ -2,52 +2,54 @@
   <div class="hgh-1">
     <h2>SIGN UP</h2>
   </div>
-  <div class="hgh-2">
-    <h3 class="ion-text-center">First Step</h3>
-    <ion-grid>
-      <ion-row>
-        <ion-col size="2">
-          <ion-icon class="icon" name="person" color="light"></ion-icon>
-        </ion-col>
-        <ion-col size="10">
-          <ion-input class="input" [(ngModel)]="data.name" placeholder="Name"></ion-input>
-        </ion-col>
-        <ion-col size="2">
-          <ion-icon class="icon" name="call" color="light"></ion-icon>
-        </ion-col>
-        <ion-col size="10">
-          <ion-input class="input" [(ngModel)]="data.phone" placeholder="Phone number with area code"></ion-input>
-        </ion-col>
-        <ion-col size="2">
-          <ion-icon class="icon"  name="mail" color="light"></ion-icon>
-        </ion-col>
-        <ion-col size="10">
-          <ion-input class="input" [(ngModel)]="data.email" placeholder="user@youremail.com"></ion-input>
-        </ion-col>
-        <ion-col size="2">
-          <ion-icon class="icon" name="lock" color="light"></ion-icon>
-        </ion-col>
-        <ion-col size="10">
-          <ion-input class="input" [(ngModel)]="data.password" placeholder="Password" type="password"></ion-input>
-        </ion-col>
-        <ion-col size="2">
-          <ion-icon class="icon" name="lock" color="light"></ion-icon>
-        </ion-col>
-        <ion-col size="10">
-          <ion-input class="input" [(ngModel)]="passwordConfirm" placeholder="Password" type="password"></ion-input>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-    <ion-grid class="padding-top ion-text-center">
-      <ion-row>
-        <ion-col size="2">
-          <ion-checkbox class="check ion-float-right" color="primary"></ion-checkbox>
-        </ion-col>
-        <ion-col size="10" class="padding-li ion-float-left">
-          <ion-label>I confirmed im 18 years old.</ion-label>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-    <ion-button expand="block" class="button-login" (click)="register()">REGISTER</ion-button>
-  </div>
+  <!-- <h3 class="ion-text-center">First Step</h3> -->
+  <ion-grid>
+    <ion-row>
+      <ion-col size="0" size-md="2" size-lg="4"></ion-col>
+      <ion-col size="12" size-md="8" size-lg="4">
+        <ion-row>
+          <ion-col size="2">
+            <ion-icon class="icon" name="person" color="light"></ion-icon>
+          </ion-col>
+          <ion-col size="10">
+            <ion-input class="input" [(ngModel)]="data.name" placeholder="Name"></ion-input>
+          </ion-col>
+          <ion-col size="2">
+            <ion-icon class="icon" name="call" color="light"></ion-icon>
+          </ion-col>
+          <ion-col size="10">
+            <ion-input class="input" [(ngModel)]="data.phone" placeholder="Phone number with area code"></ion-input>
+          </ion-col>
+          <ion-col size="2">
+            <ion-icon class="icon" name="mail" color="light"></ion-icon>
+          </ion-col>
+          <ion-col size="10">
+            <ion-input class="input" [(ngModel)]="data.email" placeholder="user@youremail.com"></ion-input>
+          </ion-col>
+          <ion-col size="2">
+            <ion-icon class="icon" name="lock" color="light"></ion-icon>
+          </ion-col>
+          <ion-col size="10">
+            <ion-input class="input" [(ngModel)]="data.password" placeholder="Password" type="password"></ion-input>
+          </ion-col>
+          <ion-col size="2">
+            <ion-icon class="icon" name="lock" color="light"></ion-icon>
+          </ion-col>
+          <ion-col size="10">
+            <ion-input class="input" [(ngModel)]="passwordConfirm" placeholder="Password" type="password"></ion-input>
+          </ion-col>
+        </ion-row>
+        <ion-row class="ion-text-center">
+          <ion-col size="2">
+            <ion-checkbox class="check ion-float-left" color="primary"></ion-checkbox>
+          </ion-col>
+          <ion-col size="10" class="padding-li ion-float-left">
+            <ion-label>I confirmed im 18 years old.</ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-button expand="block" class="button-login" (click)="register()">REGISTER</ion-button>
+      </ion-col>
+      <ion-col size="0" size-md="2" size-lg="4"></ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
