--- a/beauty-app/src/app/pages/register/register.page.scss
+++ b/beauty-app/src/app/pages/register/register.page.scss
@@ -18,7 +18,7 @@ ion-content.style {
     color: #287ff1;
     --background: rgb(236, 234, 234);
     width: 100%;
-    height: 100%;
+    height: 50px;
     border-radius: 10px;
     margin-bottom: 10px;
     text-align: center;
