--- a/beauty-app/src/theme/variables.scss
+++ b/beauty-app/src/theme/variables.scss
@@ -74,4 +74,21 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  // Colors
+  --ion-color-primary-bl: #ff00de;
+  --ion-color-primary-bl-rgb: 255,0,222;
+  --ion-color-primary-bl-contrast: #ffffff;
+  --ion-color-primary-bl-contrast-rgb: 255,255,255;
+  --ion-color-primary-bl-shade: #e000c3;
+  --ion-color-primary-bl-tint: #ff1ae1;
+}
+
+.ion-color-primary-bl {
+  --ion-color-base: var(--ion-color-primary-bl);
+  --ion-color-base-rgb: var(--ion-color-primary-bl-rgb);
+  --ion-color-contrast: var(--ion-color-primary-bl-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-primary-bl-contrast-rgb);
+  --ion-color-shade: var(--ion-color-primary-bl-shade);
+  --ion-color-tint: var(--ion-color-primary-bl-tint);
 }
