--- a/beauty-app/src/app/pages/login/login.page.html
+++ b/beauty-app/src/app/pages/login/login.page.html
@@ -2,44 +2,16 @@
   <h2> S T A R T </h2>  
     <img src="assets/logoBL/whiteLogoH.png" class="logo-login">
  
- 
-  <form>
+
   <ion-grid>
-  <ion-row class="padding">
-
-      <ion-col size="2">
-        <ion-icon name="mail" class="icons-login"></ion-icon>
-      </ion-col>
-      <ion-col size="10">
-          <ion-input type="email" class="input-login" placeholder="user@youremail.com">
+    <ion-row class="padding">
+        <ion-col size="12" size-sm="12" size-md="3" size-lg="3"></ion-col>
+        <ion-col size="12" size-sm="12" size-md="6" size-lg="6">
+          <ion-icon name="mail" color="light" size="large"></ion-icon>
+          <ion-input type="email" placeholder="user@youremail.com">
           </ion-input>
-      </ion-col>
-      <ion-col size="2">
-        <ion-icon name="lock" class="icons-login"></ion-icon>
-      </ion-col>
-      <ion-col size="10">
-          <ion-input type="password" class="input-login" placeholder="password">
-          </ion-input>
-      </ion-col>
-      <ion-col size="12">
-        <ion-button expand="block" class="button-login" routerLink="/tabs/home">Login</ion-button>
-    </ion-col>
-  </ion-row>
-  
-  <ion-row>
-    <ion-col size="12" class="center">
-      <ion-icon name="finger-print" class="icons-login"></ion-icon>
-      <img src="./../../../assets/icon/faceIconLogin.png" class="icons-login ">
-    </ion-col>
-    <ion-col size="12" class="center">
-      <h4>Im new, i need</h4>
-    </ion-col>
-    <ion-col size="12" class="center">
-      <a routerLink="/register">create an account</a>
-    </ion-col>
-    <ion-col size="4"></ion-col>  
-  </ion-row>
-
-</ion-grid>
-</form>
+        </ion-col>
+        <ion-col size="12" size-sm="12" size-md="3" size-lg="3" slot="start"></ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
