--- a/beauty-app/src/app/pages/inicio/inicio.page.html
+++ b/beauty-app/src/app/pages/inicio/inicio.page.html
@@ -1,9 +1,55 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
-    <ion-title>inicio</ion-title>
+    <ion-title>Beauty Lab</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content>
+<ion-content class="ion-padding">
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="12">
+        <ion-text color="light">
+          <h1 class="ion-text-center home">S I G N U P</h1>
+        </ion-text>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
+  <div class="space"></div>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="12" size-lg="2" size-md="2"></ion-col>
+      <ion-col size="12" size-lg="8" size-md="8">
+        <img src="../../../assets/logoBL/whiteLogoH.png" alt="" class="img-home">
+      </ion-col>
+      <ion-col size="12" size-lg="2" size-md="8"></ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-lg="2" size-md="2"></ion-col>
+      <ion-col size="12" size-lg="8" size-md="8">
+        <ion-button color="light" class="btn-home" routerLink="/login">
+          <ion-text color="primary">SIGN UP WITH YOUR EMAIL</ion-text>
+        </ion-button>
+      </ion-col>
+      <ion-col size="12" size-lg="2" size-md="2"></ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-lg="2" size-md="2"></ion-col>
+      <ion-col size="12" size-lg="8" size-md="8">
+        <ion-text color="light" class="text-home">
+          <h4 class="ion-text-center">Log in with social account</h4>
+        </ion-text>
+      </ion-col>
+      <ion-col size="12" size-lg="2" size-md="2"></ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col ize="12" size-lg="2" size-md="2"></ion-col>
+      <ion-col size="12" size-lg="8" size-md="8" class="ion-text-center">
+          <ion-icon name="logo-facebook" size="large" color="light" class="redes"></ion-icon>
+          <ion-icon name="logo-instagram" size="large" color="light" class="redes"></ion-icon>
+          <ion-icon name="logo-googleplus" size="large" color="light" class="redes"></ion-icon>
+      </ion-col>
+      <ion-col size="12" size-lg="2" size-md="2"></ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
