--- a/beauty-app/src/app/pages/login/login.page.html
+++ b/beauty-app/src/app/pages/login/login.page.html
@@ -1,5 +1,7 @@
 <ion-content>
-  <h2> S T A R T </h2>
+  <ion-text color="light">
+    <h1 class="ion-text-center home">S I G N U P</h1>
+  </ion-text>
 <ion-grid>
   <ion-row>
     <ion-col size='0' size-md='3' size-lg='4'></ion-col>
@@ -30,17 +32,17 @@
         </ion-row>
         <ion-row>
           <ion-col class="ion-text-center">
-            <img class="icon-img" src="./../../../assets/img/face-recognition.png" alt="">
+            <!-- <img class="icon-img" src="./../../../assets/img/face-recognition.png" alt=""> -->
           </ion-col  >
         </ion-row>
         <ion-row>
           <ion-col  class='ion-text-center'>
-            <ion-text>
+            <ion-text color="light">
               im new, i need
             </ion-text>
           </ion-col >
           <ion-col size='12' class='ion-text-center'>
-            <a routerLink="/register">create an account</a>
+            <a routerLink="/register" color="light" class="reg">create an account</a>
           </ion-col>
         </ion-row>
       </ion-col>
