--- a/beauty-app/src/app/pages/register/register.page.html
+++ b/beauty-app/src/app/pages/register/register.page.html
@@ -1,7 +1,18 @@
 <ion-content class="ion-padding style">
-  <div class="hgh-1">
-    <h2>SIGN UP</h2>
-  </div>
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="12" size-lg="2" size-md="2"></ion-col>
+      <ion-col size="12" size-lg="8" size-md="8">
+        <img src="../../../assets/logoBL/whiteLogoH.png" alt="" class="img-home">
+      </ion-col>
+      <ion-col size="12" size-lg="2" size-md="8"></ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-text color="light">
+    <h1 class="ion-text-center home">R E G I S T E R</h1>
+  </ion-text>
   <!-- <h3 class="ion-text-center">First Step</h3> -->
   <ion-grid>
     <ion-row>
