--- a/beauty-app/src/app/pages/register/register.page.scss
+++ b/beauty-app/src/app/pages/register/register.page.scss
@@ -65,3 +65,15 @@ ion-content.style {
     height: 50px;
     --color-hover:#f2f3f4;
 }
+
+h1.home{
+    font-family: 'suissnordregular';
+    size: 50px;
+}
+
+.img-home{
+    width: 65%;
+    height: auto; 
+    display: block;
+    margin: 0 auto;
+}
