--- a/beauty-app/src/app/pages/rooms/rooms.page.scss
+++ b/beauty-app/src/app/pages/rooms/rooms.page.scss
@@ -1,23 +1,6 @@
-ion-content {
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
-    ion-label {
-        color: white;
-    }
-}
-.img-logo{
-    padding-top: 0.2rem;
-    width: 18%;
-}
-.img-room{
-    height: 100px;
-}
-.center{
-    text-align: center;
+.galeria{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+    border-radius: 0.5rem;
 }
