--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -8,7 +8,7 @@
     </ion-slides>
     <ion-slides pager="true" [options]="slideOpts">
         <ion-slide *ngFor="let item of plans">
-            <img (click)="viewVideo(item.video)" src="assets/img/360PLAN.png" alt="picture">
+            <img src="assets/img/360PLAN.png" alt="picture">
         </ion-slide>
     </ion-slides>
     <h3 class="ion-text-center">PLANS</h3>
