--- a/beauty-app/src/app/pages/contact/contact.page.html
+++ b/beauty-app/src/app/pages/contact/contact.page.html
@@ -1,9 +1,43 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>contact</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-header></app-header>
 <ion-content>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col class="ion-text-center">
+    <ion-text class="title-contact" >Contact Us </ion-text>
+    </ion-col>
+  </ion-row>
+    <ion-row>
+      <ion-col size='0' size-sm='0' size-md='3' size-lg='4'></ion-col>
+      <ion-col size='12' size-sm='12' size-md='6' size-lg='4'>
+        <ion-col size='0' size-sm='0' size-md='3' size-lg='4'></ion-col>
+    <ion-row>
+      <ion-col>
+        <ion-input class='input-contact' placeholder='Enter your name'></ion-input>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-input class='input-contact' type="mail" placeholder='Enter your email'></ion-input>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-input class='input-contact' placeholder='Enter your phone'></ion-input>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-textarea class='text-area' placeholder='Write your messagge' ></ion-textarea>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class= 'ion-text-center' >
+        <ion-button type='submit'class='button-contact'>
+          Send
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
