--- a/beauty-app/src/app/pages/profile/profile.page.html
+++ b/beauty-app/src/app/pages/profile/profile.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/homeapp"></ion-back-button>
     </ion-buttons>
-    <ion-title text-center>Profile</ion-title>
+    <ion-title class="ion-text-center">Profile</ion-title>
     <ion-buttons slot="end">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
@@ -17,7 +17,7 @@
       <ion-col class="content-img" size="12" size-md="8" size-lg="6">
         <div class="ion-text-center">
           <img class="logo-img" src="assets/logoBL/whiteLogoH.png" alt="">
-          <h2 class="font-title">Your Profile</h2>
+          <h2 class="font-title">Y o u r P r o f i l e</h2>
           <img class="profile-img" src="assets/img/PROFILEPICTURE.png" alt="profileuser">
           <h4>Nancy Dabolio</h4>
           <h5>nancyD3@gmail.com</h5>
