--- a/beauty-app/src/app/pages/plans/plans.page.html
+++ b/beauty-app/src/app/pages/plans/plans.page.html
@@ -1,5 +1,46 @@
 <app-header titulo="BeautyLab Plans"></app-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
+            <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
+                <ion-text color="light">
+                    <h1 class="ion-text-center home">P L A N S</h1>
+                    <h3 class="ion-text-center textCss">These are Our Plans</h3>
+                  </ion-text>
+            </ion-col>
+            <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
+        </ion-row>
+    </ion-grid>
+
+
+
+<ion-grid fixed>
+    <ion-row>
+        <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
+        <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
+            <img src="../../../assets//img/plan360Temp.png" class="plans">
+        </ion-col>
+        <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
+        <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
+            <img src="../../../assets//img/plan360Temp.png" class="plans">
+        </ion-col>
+        <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
+        <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
+            <img src="../../../assets//img/plan360Temp.png" class="plans">
+        </ion-col>
+        <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
+    </ion-row>
+</ion-grid>
+
 
 </ion-content>
