--- a/beauty-app/src/app/pages/new-post/new-post.page.html
+++ b/beauty-app/src/app/pages/new-post/new-post.page.html
@@ -1,9 +1,46 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>new-post</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>New Post</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col size="0" size-md="2" size-md="4"></ion-col>
+      <ion-col size="12" size-md="8" size-md="4">
+        <ion-row>
+          <ion-col size="12">
+            <ion-label>Title:</ion-label>
+            <input type="text" class="input">
+          </ion-col>
+          <ion-col class="ion-text-center" size="6">
+            <ion-button (click)="photoPic()" color="tertiary">
+              <ion-icon slot="start" name="camera"></ion-icon>
+              Camera
+            </ion-button>
+          </ion-col>
+          <ion-col class="ion-text-center" size="6">
+            <ion-button (click)="openGallery()" color="tertiary">
+              <ion-icon slot="start" name="image"></ion-icon>
+              Gallery
+            </ion-button>
+          </ion-col>
+          <ion-col size="6">
+            <img [src]="photo" *ngIf="photo">
+          </ion-col>
+          <ion-col size="6">
+            <img [src]="imageSrc" *ngIf="imageSrc">
+          </ion-col>
+          <ion-col size="6">
+            <img [src]="imageComp" *ngIf="imageComp">
+          </ion-col>
+        </ion-row>
+      </ion-col>
+      <ion-col size="0" size-md="2" size-md="4"></ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
