--- a/beauty-app/src/app/pages/new-post/new-post.page.scss
+++ b/beauty-app/src/app/pages/new-post/new-post.page.scss
@@ -26,3 +26,13 @@ h1,
 .button-opt{
     color: #fff;
 }
+.trash{
+    font-size: 22px;
+    position: relative;
+    left: 91%;
+    top: 14%;
+    border-radius: 100px;
+    border: 1px aliceblue solid;
+    cursor: pointer;
+    background: aliceblue;
+}
