--- a/beauty-app/src/app/pages/contact/contact.page.scss
+++ b/beauty-app/src/app/pages/contact/contact.page.scss
@@ -24,6 +24,7 @@ ion-text{
 }
 .title-contact{
     font-family: 'suissnordregular';
+    color:#fff;
 }
 .text-area{
     --background: rgb(236, 234, 234);
