--- a/beauty-app/src/app/pages/plans/plans.page.html
+++ b/beauty-app/src/app/pages/plans/plans.page.html
@@ -20,7 +20,7 @@
     <ion-row>
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
         <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
-            <img src="../../../assets//img/plan360Temp.png" class="plans">
+            <img src="assets/img/3dplanpic.png" class="plans">
         </ion-col>
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
     </ion-row>
@@ -28,7 +28,7 @@
     <ion-row>
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
         <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
-            <img src="../../../assets//img/plan360Temp.png" class="plans">
+            <img src="assets/img/plan360Temp.png" class="plans">
         </ion-col>
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
     </ion-row>
@@ -36,7 +36,7 @@
     <ion-row>
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
         <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
-            <img src="../../../assets//img/plan360Temp.png" class="plans">
+            <img src="assets//img/plan360Temp.png" class="plans">
         </ion-col>
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
     </ion-row>
