--- a/beauty-app/src/app/pages/procedures/procedures.page.html
+++ b/beauty-app/src/app/pages/procedures/procedures.page.html
@@ -1,5 +1,42 @@
 <app-header titulo="BeautyLab Procedures"></app-header>
 
 <ion-content>
+    <ion-content class="ion-padding">
+        <ion-grid fixed>
+            <ion-row>
+                <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
+                <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
+                    <ion-text color="light">
+                        <h1 class="ion-text-center home">P R O C E D U R E S</h1>
+                        <h3 class="ion-text-center textCss">These are Our Procedures, <br> Specially for You</h3>
+                      </ion-text>
+                </ion-col>
+                <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
+            </ion-row>
+        </ion-grid>
+    
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col size="6" size-lg="4" size-md="4" size-xl="4">
+                <img src="./assets/img/proceed1.png" class="plans">
+                <ion-text color="light"><h4 class="ion-text-center txtProc">N O S E</h4></ion-text>
+            </ion-col>
+            <ion-col size="6" size-lg="4" size-md="4" size-xl="4">
+                <img src="./assets/img/proceed2.png" class="plans">
+                <ion-text color="light"><h4 class="ion-text-center txtProc">B R E A S T</h4></ion-text>
+            </ion-col>
+            <ion-col size="6" size-lg="4" size-md="4" size-xl="4">
+                <img src="./assets/img/proceed3.png" class="plans">
+                <ion-text color="light"><h4 class="ion-text-center txtProc">B O O T Y</h4></ion-text>
+            </ion-col>
+            <ion-col size="6" size-lg="4" size-md="4" size-xl="4">
+                <img src="./assets/img/proceed2.png" class="plans">
+                <ion-text color="light"><h4 class="ion-text-center txtProc">B R E A S T</h4></ion-text>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            
+        </ion-row>
+    </ion-grid>
 
 </ion-content>
