--- a/beauty-app/src/app/pages/register/register.page.html
+++ b/beauty-app/src/app/pages/register/register.page.html
@@ -23,13 +23,13 @@
             <ion-icon class="icon" name="person" color="light"></ion-icon>
           </ion-col>
           <ion-col size="10">
-            <ion-input class="input" [(ngModel)]="data.name" placeholder="Name"></ion-input>
+            <ion-input class="input" [(ngModel)]="data.nombres" placeholder="Name"></ion-input>
           </ion-col>
           <ion-col size="2">
             <ion-icon class="icon" name="call" color="light"></ion-icon>
           </ion-col>
           <ion-col size="10">
-            <ion-input class="input" [(ngModel)]="data.phone" placeholder="Phone number with area code"></ion-input>
+            <ion-input class="input" [(ngModel)]="data.movil" placeholder="Phone number with area code"></ion-input>
           </ion-col>
           <ion-col size="2">
             <ion-icon class="icon" name="mail" color="light"></ion-icon>
@@ -47,7 +47,7 @@
             <ion-icon class="icon" name="lock" color="light"></ion-icon>
           </ion-col>
           <ion-col size="10">
-            <ion-input class="input" [(ngModel)]="passwordConfirm" placeholder="Password" type="password"></ion-input>
+            <ion-input class="input" [(ngModel)]="data.password_confirmation" placeholder="Password" type="password"></ion-input>
           </ion-col>
         </ion-row>
         <ion-row class="ion-text-center">
