--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -1,8 +1,8 @@
 <app-header titulo="BeautyLab HomeApp"></app-header>
 
-<ion-content class="background-bl">
+<ion-content class="background-bl ion-padding">
     <ion-slides pager="true" [options]="slideOpts">
-        <ion-slide *ngFor="let item of videos" class="padding">
+        <ion-slide *ngFor="let item of videos">
             <img (click)="viewVideo(item.video)" class="img-hd" src="assets/img/{{item.picture}}" alt="picture">
         </ion-slide>
     </ion-slides>
@@ -14,7 +14,7 @@
     <h3 class="ion-text-center">PROCEDURES</h3>
     <ion-slides pager="true" [options]="slideOpts">
         <ion-slide *ngFor="let item of services">
-            <ion-grid>
+            <ion-grid fixed>
                 <ion-row>
                     <ion-col *ngFor="let img of item.items" size="4">
                         <img src="assets/img/SERVICE{{img}}.png" class="img-service" alt="service">
