--- a/beauty-app/src/app/pages/contact/contact.page.html
+++ b/beauty-app/src/app/pages/contact/contact.page.html
@@ -3,7 +3,7 @@
   <ion-grid>
     <ion-row>
       <ion-col class="ion-text-center">
-    <ion-text class="title-contact" >Contact Us </ion-text>
+    <ion-text class="title-contact" >C O N T A C T  U S </ion-text>
     </ion-col>
   </ion-row>
     <ion-row>
