--- a/beauty-app/src/app/pages/inicio/inicio.page.html
+++ b/beauty-app/src/app/pages/inicio/inicio.page.html
@@ -20,15 +20,19 @@
     <ion-row>
       <ion-col size="12" size-lg="2" size-md="2"></ion-col>
       <ion-col size="12" size-lg="8" size-md="8">
-        <img src="../../../assets/logoBL/whiteLogoH.png" alt="" class="img-home">
+        <br><br>
+        <!-- <img src="../../../assets/logoBL/whiteLogoH.png" alt="" class="img-home"> -->
       </ion-col>
       <ion-col size="12" size-lg="2" size-md="8"></ion-col>
     </ion-row>
+    
     <ion-row>
       <ion-col size="12" size-lg="2" size-md="2"></ion-col>
       <ion-col size="12" size-lg="8" size-md="8">
-        <ion-button color="light" class="btn-home" routerLink="/login">
-          <ion-text color="primary">SIGN UP WITH YOUR EMAIL</ion-text>
+        <ion-button color="trasparent" fill="outline" class="btn-home" routerLink="/login">
+          <ion-text color="light">
+            <h3>SIGN UP WITH YOUR EMAIL</h3>
+          </ion-text>
         </ion-button>
       </ion-col>
       <ion-col size="12" size-lg="2" size-md="2"></ion-col>
