--- a/beauty-app/src/app/pages/data-complete/data-complete.page.html
+++ b/beauty-app/src/app/pages/data-complete/data-complete.page.html
@@ -2,8 +2,8 @@
 <ion-content>
 <ion-grid>
     <ion-row>
-        <ion-col size='2' size-sm='2' size-md='4' size-lg='4'></ion-col>
-        <ion-col size='8' size-sm='8' size-md='4' size-lg='4'>
+        <ion-col size='1' size-sm='1' size-md='4' size-lg='4'></ion-col>
+        <ion-col size='10' size-sm='10' size-md='4' size-lg='4'>
                 <ion-col size='12'>
             <ion-input class="input-complete" placeholder="Nickname"> </ion-input>
                 </ion-col>
@@ -13,6 +13,14 @@
                 <ion-col size='12'>
             <ion-input class="input-complete" placeholder="Adress"></ion-input>
                 </ion-col>
+                <ion-col>
+            <ion-col size='12'>
+                <ion-input class="input-complete" placeholder="Phone"></ion-input>
+            </ion-col>
+                </ion-col>
+                <ion-col size="12">
+            <ion-input class="input-complete" placeholder="Document"></ion-input>
+                </ion-col>  
                 <ion-col size='12'>
             <ion-select class="select-complete" placeholder="Country">
                 <ion-select-option>Estados unidos</ion-select-option>
@@ -20,14 +28,15 @@
                 <ion-select-option>Colombia</ion-select-option>
             </ion-select >
                 </ion-col>
-                <ion-col size='12'>
+                <ion-col size="12">
             <ion-select class="select-complete"placeholder="City">
                 <ion-select-option>Medellin</ion-select-option>
                 <ion-select-option>New York</ion-select-option>
             </ion-select>
                 </ion-col>
+
         </ion-col>
-        <ion-col size='2' size-sm='2' size-md='4' size-lg='4'></ion-col>
+        <ion-col size='1' size-sm='1' size-md='4' size-lg='4'></ion-col>
     </ion-row>
 </ion-grid>
 </ion-content>
