--- a/beauty-app/src/app/components/menu/menu.component.scss
+++ b/beauty-app/src/app/components/menu/menu.component.scss
@@ -10,3 +10,33 @@ ion-menu {
       background: transparent;
     }
   }
+.user-info{
+  height: auto;
+  background: #ff57ea;
+}
+.bl-points{
+  margin-bottom: 0rem;
+  margin-top: 0.8rem;
+}
+.img-user{
+  border-radius: 1000rem;
+  width: 27%;
+  height: 35%;
+}
+.content-user{
+  color: #fff;
+  text-align: center;
+}
+.center{
+  margin: 0 auto;
+}
+.margins{
+  margin-top: 0.3rem;
+  margin-bottom: 0rem;
+}
+.link{
+  font-size: 13px;
+}
+.bl-logo{
+  width: 25px;
+}
