--- a/beauty-app/src/app/components/menu/menu.component.scss
+++ b/beauty-app/src/app/components/menu/menu.component.scss
@@ -1,3 +1,9 @@
+h1,h2,h3,h4,h5,p,label{
+  font-family: 'suissnordregular';
+}
+.font{
+  font-family: 'suissnordregular';
+}
 ion-menu {
     --ion-background-color: var(--ion-color-light) !important;
     --ion-text-color: var(--ion-color-light-contrast);
@@ -12,7 +18,7 @@ ion-menu {
   }
 .user-info{
   height: auto;
-  background: #ff57ea;
+  background: #b31fa0;
 }
 .bl-points{
   margin-bottom: 0rem;
@@ -38,5 +44,5 @@ ion-menu {
   font-size: 13px;
 }
 .bl-logo{
-  width: 25px;
+  width: 30px;
 }
