Profile img right side
se puso una imagen en lugar de un icono y se implemento una ruta hacia la pagina profile

--- a/beauty-app/src/app/components/header/header.component.html
+++ b/beauty-app/src/app/components/header/header.component.html
@@ -10,8 +10,8 @@
     <!-- <ion-title text-capitalize>{{ titulo }}</ion-title> -->
     <img src="../../../assets/img/horizontal_logo.png" class="img-header">
     <ion-buttons slot="end">
-      <ion-avatar>
-        <img src="/assets/img/user2.png">
+      <ion-avatar routerLink="/profile">
+        <img  class="header-style" src="/assets/img/PROFILEPICTURE.png">
       </ion-avatar>
       
     </ion-buttons>
