--- a/beauty-app/src/app/pages/homeapp/homeapp.page.scss
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.scss
@@ -14,3 +14,9 @@ ion-slides{
 .img-service{
     height: 80px;
 }
+.pos-btn-slides{
+    padding-bottom: 0.9rem;
+}
+.pos-btn-slides-2{
+    padding-bottom: 1.4rem;
+}
