--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -1,19 +1,19 @@
 <app-header titulo="BeautyLab HomeApp"></app-header>
 
 <ion-content class="background-bl ion-padding">
-    <ion-slides pager="true" [options]="slideOpts">
+    <ion-slides pager="true" [options]="slideOpts" class="pos-btn-slides">
         <ion-slide *ngFor="let item of videos">
             <img (click)="viewVideo(item.video)" class="img-hd" src="assets/img/{{item.picture}}" alt="picture">
         </ion-slide>
     </ion-slides>
-    <ion-slides pager="true" [options]="slideOpts">
+    <ion-slides pager="true" [options]="slideOpts" class="pos-btn-slides-2">
         <ion-slide *ngFor="let item of plans">
-            <img src="assets/img/plan{{item}}.png" alt="picture">
+            <img src="assets/img/plan{{item}}.png"  alt="picture">
         </ion-slide>
     </ion-slides>
     <h3 class="ion-text-center">PROCEDURES</h3>
     <ion-slides pager="true" [options]="slideOpts">
-        <ion-slide *ngFor="let item of services">
+        <ion-slide *ngFor="let item of services" class="pos-btn-slides">
             <ion-grid fixed>
                 <ion-row>
                     <ion-col *ngFor="let img of item.items" size="4">
@@ -25,11 +25,11 @@
     </ion-slides>
     <h3 class="ion-text-center">TOURISTIC PLANS</h3>
     <ion-slides pager="true" [options]="slideOpts">
-        <ion-slide *ngFor="let item of touristic">
+        <ion-slide *ngFor="let item of touristic" class="pos-btn-slides" >
             <ion-grid>
                 <ion-row>
-                    <ion-col size="4" *ngFor="let tur of item.items">
-                        <img src="assets/img/TOURISTICPLAN{{tur}}.png" alt="service">
+                    <ion-col size="4" *ngFor="let tur of item.items" >
+                        <img src="assets/img/TOURISTICPLAN{{tur}}.png"alt="service">
                     </ion-col>
                 </ion-row>
             </ion-grid>
