--- a/beauty-app/src/app/pages/plans/plans.page.html
+++ b/beauty-app/src/app/pages/plans/plans.page.html
@@ -17,15 +17,15 @@
 
 
 <ion-grid fixed>
-    <ion-row>
+    <ion-row *ngFor="let images of plans">
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
         <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
-            <img src="assets/img/pyp/3dplan.jpg" class="plans">
+            <img src="assets/img/pyp/{{images}}" class="plans">
         </ion-col>
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
     </ion-row>
 
-    <ion-row>
+<!--     <ion-row>
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
         <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
             <img src="assets/img/pyp/bootyplan.jpg" class="plans">
@@ -39,7 +39,7 @@
             <img src="assets//img/pyp/superplan.jpg" class="plans">
         </ion-col>
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
-    </ion-row>
+    </ion-row> -->
 </ion-grid>
 
 
