--- a/beauty-app/src/app/pages/data-complete/data-complete.page.html
+++ b/beauty-app/src/app/pages/data-complete/data-complete.page.html
@@ -21,9 +21,9 @@
                 </ion-col>
                 <ion-col size='12'>
                     <ion-select [(ngModel)]="data.id_pais" class="select-complete" placeholder="Country">
-                        <ion-select-option value="Estados Unidos" >Estados unidos</ion-select-option>
-                        <ion-select-option value="Canada" >Canada</ion-select-option>
-                        <ion-select-option value="Colombia" >Colombia</ion-select-option>
+                        <ion-select-option value="1" >Estados unidos</ion-select-option>
+                        <ion-select-option value="2" >Canada</ion-select-option>
+                        <ion-select-option value="3" >Colombia</ion-select-option>
                     </ion-select>
                 </ion-col>
                 <ion-col size="12">
