--- a/beauty-app/src/app/pages/homeapp/homeapp.page.scss
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.scss
@@ -5,6 +5,10 @@ ion-slides{
     --bullet-background:grey;
     --bullet-background-active:#FFF;
 }
+h3{
+    margin: 0.3rem;
+    font-family: 'suissnordregular';
+}
 .padding{
     padding: 1.5rem;
 }
