--- a/beauty-app/src/app/components/menu/menu.component.html
+++ b/beauty-app/src/app/components/menu/menu.component.html
@@ -5,7 +5,7 @@
         <ion-row>
           <ion-col class="content-user" size="12">
             <img (click)="redirect()" class="center img-user" src="assets/img/PROFILEPICTURE.png">
-            <h4 class="margins">{{data.nombres}} </h4>
+            <h4 class="margins">{{name}} </h4>
             <h6 class="margins link">https://beautylab.com.co</h6>
             <p class="bl-points">
               B L P o i n t s  <br>
