images and fonts

--- a/beauty-app/src/app/app.component.scss
+++ b/beauty-app/src/app/app.component.scss
@@ -2,3 +2,14 @@
     font-family: suissnordregular;
     src : url('../assets/fonts/suissnord-webfont.woff')
 }
+
+@font-face{
+    font-family: advent_promedium;
+    src : url('../assets/fonts/adventpro-medium-webfont.woff')
+}
+
+@font-face{
+    font-family: bioliquidregular;
+    src : url('../assets/fonts/bioliquid-regular-webfont.woff')
+}
+
