--- a/beauty-app/src/app/components/menu/menu.component.scss
+++ b/beauty-app/src/app/components/menu/menu.component.scss
@@ -1,8 +1,9 @@
 h1,h2,h3,h4,h5,p,label{
-  font-family: 'suissnordregular';
+  font-family: 'bioliquidregular';
 }
 .font{
-  font-family: 'suissnordregular';
+  font-family: 'bioliquidregular';
+  size: 28px;
 }
 ion-menu {
     --ion-background-color: var(--ion-color-light) !important;
@@ -41,7 +42,7 @@ ion-menu {
   margin-bottom: 0rem;
 }
 .link{
-  font-size: 13px;
+  font-size: 18px;
 }
 .bl-logo{
   width: 30px;
