--- a/beauty-app/src/global.scss
+++ b/beauty-app/src/global.scss
@@ -59,3 +59,12 @@ ion-menu{
     max-height: 60px;
     padding-top: 2px;
 }
+.green-wpp span, .green-wpp .action-sheet-button-inner, .green-wpp .sc-ion-action-sheet-md{
+    color: #80C764 !important;
+}
+.blue-mail span, .blue-mail .action-sheet-icon, .blue-mail .sc-ion-action-sheet-md {
+    color: #76B7F8
+}
+.gray-msg span{
+    color: #B2BCBF;
+}
