--- a/beauty-app/src/app/pages/login/login.page.html
+++ b/beauty-app/src/app/pages/login/login.page.html
@@ -42,7 +42,10 @@
             </ion-text>
           </ion-col >
           <ion-col size='12' class='ion-text-center'>
-            <a routerLink="/register" color="light" class="reg">create an account</a>
+            <a routerLink="/register" class="reg">create an account</a>
+          </ion-col>
+          <ion-col size='12' class="ion-text-center"> 
+              <a routerLink="/terms" class="reg">Terms And Conditions</a>
           </ion-col>
         </ion-row>
       </ion-col>
