--- a/beauty-app/src/app/pages/profile/profile.page.html
+++ b/beauty-app/src/app/pages/profile/profile.page.html
@@ -42,11 +42,11 @@
       <ion-col size="0" size-md="2" size-lg="3"></ion-col>
     </ion-row>
   </ion-grid>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="content=='reviewBlog'">
+  <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="content=='reviewBlog'">
     <ion-fab-button routerLink="/new-post">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
-  </ion-fab>
+  </ion-fab> -->
   <ion-fab  vertical="bottom" horizontal="end" slot="fixed" *ngIf="content=='personalData'">
     <ion-fab-button color="primary-bl" routerLink="/data-complete">
       <ion-icon name="create"></ion-icon>
