--- a/beauty-app/src/app/pages/tabs/tabs.page.html
+++ b/beauty-app/src/app/pages/tabs/tabs.page.html
@@ -8,6 +8,14 @@
       <ion-icon name="apps"></ion-icon>
       <ion-label>Tab Two</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="social">
+      <ion-icon name="cloud"></ion-icon>
+      <ion-label>Social</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="car-shop">
+      <ion-icon name="cart"></ion-icon>
+      <ion-label>Shoping car</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
  
