--- a/beauty-app/src/app/pages/homeapp/homeapp.page.scss
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.scss
@@ -16,7 +16,7 @@ h3{
     height: 200px;
 }
 .img-service{
-    height: 80px;
+    border-radius: 1.5rem;
 }
 .pos-btn-slides{
     padding-bottom: 0.9rem;
@@ -24,3 +24,7 @@ h3{
 .pos-btn-slides-2{
     padding-bottom: 1.4rem;
 }
+
+
+
+
