--- a/beauty-app/src/app/pages/procedures/procedures.page.html
+++ b/beauty-app/src/app/pages/procedures/procedures.page.html
@@ -16,26 +16,11 @@
         </ion-grid>
     
     <ion-grid fixed>
-        <ion-row>
-            <ion-col size="6" size-lg="4" size-md="4" size-xl="4">
-                <img src="./assets/img/proceed1.png" class="plans">
-                <ion-text color="light"><h4 class="ion-text-center txtProc">N O S E</h4></ion-text>
-            </ion-col>
-            <ion-col size="6" size-lg="4" size-md="4" size-xl="4">
-                <img src="./assets/img/proceed2.png" class="plans">
-                <ion-text color="light"><h4 class="ion-text-center txtProc">B R E A S T</h4></ion-text>
-            </ion-col>
-            <ion-col size="6" size-lg="4" size-md="4" size-xl="4">
-                <img src="./assets/img/proceed3.png" class="plans">
-                <ion-text color="light"><h4 class="ion-text-center txtProc">B O O T Y</h4></ion-text>
-            </ion-col>
-            <ion-col size="6" size-lg="4" size-md="4" size-xl="4">
-                <img src="./assets/img/proceed2.png" class="plans">
-                <ion-text color="light"><h4 class="ion-text-center txtProc">B R E A S T</h4></ion-text>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            
+        <ion-row >
+            <ion-col size="6" size-lg="4" size-md="4" size-xl="4" *ngFor="let img of procedures">
+                <img src="./assets/img/pyp/{{img.image}}" class="plans">
+                <ion-text color="light" ><h4 class="ion-text-center txtProc">{{img.description}}</h4></ion-text>
+            </ion-col>  
         </ion-row>
     </ion-grid>
 
